# greekC

./: README.md
cLang-8/: .color_coded  .ycm_extra_conf.py  Makefile  alg_anadromi.c  alg_anadromi.h  array.c  array.h  code.workspace  cscope.out  lessons.project  make  mstd.c  mstd.h  mstring.c  mstring.h  mstring_test  mstring_test.c  my_math.c  my_math.h  paragontiko  paragontiko.c  random  random.c  tags  test  test.c
cLang-8/.codelite/: code.tags  cppcheck.list  refactoring.db
cLang-8/mstring_test.dSYM/Contents/: Info.plist
cLang-8/mstring_test.dSYM/Contents/Resources/DWARF/: mstring_test
cLang-8/paragontiko.dSYM/Contents/: Info.plist
cLang-8/paragontiko.dSYM/Contents/Resources/DWARF/: paragontiko
cLang-8/random.dSYM/Contents/Resources/DWARF/: random
cLang-8/test.dSYM/Contents/Resources/DWARF/: test
includes/: mio.c  mio.h
lesson11/: CMakeLists.txt  main.c
lesson12/: CMakeLists.txt  fgets.c  main.c  multi.c
lesson13/: CMakeCache.txt  CMakeLists.txt  Makefile  apostasi  apostasi.c  cmake_install.cmake  domes  domes.c  lesson13  lesson13.cbp  records.c  records.h  struct.c
lesson13/domes.dSYM/Contents/Resources/DWARF/: domes
